--- a/ProyectoBses/nbproject/project.properties
+++ b/ProyectoBses/nbproject/project.properties
@@ -31,7 +31,8 @@ file.reference.mysql-connector-java-5.1.45-bin.jar=\\\\VBOXSVR\\CarpetaVirtualBo
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.45-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
